add html scheme

--- a/index.html
+++ b/index.html
@@ -13,51 +13,73 @@
 
 <body>
     <!-- Header -->
-    <div class="container">
-        <div class="row">
+    <section class="container">
+        <section class="row">
+            <header class="border col">
+                <a class="btn btn-primary" href="#" role="button">Contact us</a>
+            </header>
+        </section>
+    </section>
+
+    <!-- Instructions-->
+    <section class="container">
+        <section class="row">
             <div class="border col">
-                Header
+                <p>Welcome to the smurfs' chatbot!</p>
+                <p>It's easy: just write me a message and I will answer you!</p>
             </div>
-        </div>
-    </div>
+        </section>
 
-    <!-- Image Robot and Instructions-->
-    <div class="container">
-        <div class="row">
-            <div class="border col-8 offset-2">
-                Image
+        <!-- Image Smurf and Text-->
+        <section class="row">
+            <div class="border col-8 offset-2 col-sm-5 offset-sm-1">
+                <img class="img-fluid " src="./pictures/pic1.png" alt="smurf1">
             </div>
-        </div>
-        <div class="row">
-            <div class="border col">
-                Instructions
+            <div class="text-smurf border col-8 offset-2 col-sm-4 offset-sm-1">
+                Text
             </div>
-        </div>
+        </section>
+        <section class="row">
+            <div class="border col-8 offset-2 col-sm-4 offset-sm-7">
+                <a class="btn btn-primary btn-block" href="#" role="button">Send</a>
+            </div>
+        </section>
 
-    </div>
 
-    <!-- Text Box and Send Button-->
-    <div class="container">
-        <div class="row">
-            <div class="border col-10 offset-1">
-                Text Box
-            </div>
-        </div>
-        <div class="row">
-            <div class="border col-6 offset-5">
-                button
-            </div>
-        </div>
-    </div>
+    </section>
 
     <!-- Footer -->
-    <div class="container">
-        <div class="row">
-            <div class="border col">
-                Footer
-            </div>
-        </div>
-    </div>
+    <footer class="container">
+        <!-- Yuliya -->
+        <section class="row">
+            <section class="border col-6 col-sm-2">
+                <img class="img-members" src="./pictures/yuliya.jpeg" alt="yulyia">
+            </section>
+            <section class="border col-6 col-sm-2">
+                <p>Project Manager - Yuliya Bochkovskaya</p>
+            </section>
+
+            <!-- Adriana -->
+
+            <section class="border col-6 col-sm-2">
+                <img class="img-members" src="./pictures/adriana.jpeg" alt="adriana">
+            </section>
+            <section class="border col-6 col-sm-2">
+                <p>Front-End Developer - Adriana Lazurca</p>
+            </section>
+
+            <!-- Frances -->
+
+            <section class="border col-6 col-sm-2">
+                <img class="img-members" src="./pictures/frances.jpeg" alt="frances">
+            </section>
+            <section class="border col-6 col-sm-2">
+                <p>Back-End Developer - Frances Joffany Navarro</p>
+            </section>
+        </section>
+    </footer>
+
+
 
 
     <script src="script.js"></script>
