--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             </div>
 
             <div id="chatBox" class="card border col-8 offset-2 col-sm-4 offset-sm-1" style="width: 18rem;">
-                <ul class="list-group list-group-flush">
+                <!--<ul class="list-group list-group-flush">
                     <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
                     <li class="list-group-item">Vestibulum at eros</li>
-                </ul>
+                </ul>-->
             </div>
             
 
