--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
             <div id="chatBox" class="card border col-8 offset-2 col-sm-4 offset-sm-1" style="width: 18rem;">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Cras justo odio</li>
+                    <!-- <li class="list-group-item">Cras justo odio</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
+                    <li class="list-group-item">Vestibulum at eros</li> -->
                 </ul>
             </div>
             
@@ -48,7 +48,7 @@
         </section>
         <section class="row">
             <section class="border col-8 offset-2 col-sm-4 offset-sm-7" >
-                <textarea type="text" name="inputMessage" id="inputMessage"></textarea>
+                <textarea name="inputMessage" id="inputMessage"></textarea>
             </section>
             <div class="border col-8 offset-2 col-sm-4 offset-sm-7">
                 <a id="send" class="btn btn-primary btn-block" href="#" role="button">Send</a>
