add Task #12 and #23 function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Image Smurf and Text-->
         <section class="row">
             <div class="border col-8 offset-2 col-sm-5 offset-sm-1">
-                <img class="img-fluid " src="./pictures/pic1.png" alt="smurf1">
+                <img class="img-fluid " src="./pictures/pic1.png" alt="smurf1" id = "smurfImage">
             </div>
 
             <div id="chatBox" class="card border col-8 offset-2 col-sm-4 offset-sm-1" style="width: 18rem;">
