--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         <!-- Image Smurf and Text-->
         <main class="row">
-            <figure class="border col-10 offset-1 col-sm-5 offset-sm-0 text-center">
-                <img class="img-fluid" src="./pictures/pic1.png" alt="smurf1">
+            <figure class="border col-10 offset-1 col-sm-5 offset-sm-0 text-center" style="margin: 0;">
+                <img class="img-fluid" id = "smurfImage" src="./pictures/pic1.png" alt="smurf1">
             </figure>
 
             <section id="chatBox" class="card border col-10 offset-1 col-sm-6 offset-sm-0" style="width: 18rem;">
