--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Image Smurf and Text-->
         <section class="row">
             <figure class="col-10 offset-1 col-sm-5 offset-sm-0 text-center" style="margin: 0;">
-                <img class="img-fluid" id="smurfImage" src="./pictures/pic1.png" alt="smurf1">
+                <img class="img-fluid" id="smurfImage" src="https://assets.stickpng.com/thumbs/5a7b6d93abc3d121aba710a0.png" alt="smurf1">
             </figure>
 
             <section id="chatBox" class="card col-10 offset-1 col-sm-6 offset-sm-0" style="width: 18rem;">
@@ -65,7 +65,7 @@
         <!-- Yuliya -->
         <aside class="row text-center">
             <figure class="col-6 col-md-2">
-                <img class="img-members" src="./pictures/yuliya.jpeg" alt="yulyia">
+                <img class="img-members" src="https://avatars.githubusercontent.com/u/77075781?s=460&u=c2568ed6d1a0594dae3f1a8d125395b20bbd203d&v=4" alt="yulyia">
             </figure>
             <section class="col-6 col-md-2">
                 <h6>Project Manager - Yuliya Bochkovskaya</h6>
@@ -77,7 +77,7 @@
             <!-- Adriana -->
 
             <figure class="col-6 col-md-2">
-                <img class="img-members" src="./pictures/adriana.jpeg" alt="adriana">
+                <img class="img-members" src="https://avatars.githubusercontent.com/u/73725361?s=460&u=8df0d19fd60e632b716d1450574fd606e0b533c5&v=4" alt="adriana">
             </figure>
             <section class="col-6 col-md-2">
                 <h6>Front-End Developer - Adriana Lazurca</h6>
@@ -89,7 +89,7 @@
             <!-- Frances -->
 
             <figure class="col-6 col-md-2">
-                <img class="img-members" src="./pictures/frances.jpeg" alt="frances">
+                <img class="img-members" src="https://avatars.githubusercontent.com/u/77080353?s=460&u=305f83234db742e1bb228924c9d80250787619b4&v=4" alt="frances">
             </figure>
             <section class="col-6 col-md-2">
                 <h6>Back-End Developer - Frances Joffany Navarro</h6>
