--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
 
         <!-- Image Smurf and Text-->
-        <main class="row">
+        <div class="row">
             <figure class="col-10 offset-1 col-sm-5 offset-sm-0 text-center mt-2" style="margin: 0;">
                 <img class="img-fluid" id="smurfImage"
                     src="https://assets.stickpng.com/thumbs/5a7b6d93abc3d121aba710a0.png" alt="smurf1">
@@ -41,9 +41,9 @@
 
             <div id="chatBox" class="card col-10 offset-1 col-sm-6 offset-sm-0 mt-2" style="width: 18rem;">
             </div>
-        </main>
+        </div>
 
-        <main class="row">
+        <div class="row">
             <div class="col-10 offset-1 col-sm-6 offset-sm-5">
                 <label for="inputMessage"></label>
                 <textarea name="inputMessage" id="inputMessage" placeholder="Write a message"></textarea>
@@ -51,7 +51,7 @@
             <div class="col-10 offset-1 col-sm-6 offset-sm-5">
                 <a id="send" class="btn btn-primary btn-block text-white" role="button">Send</a>
             </div>
-        </main>
+        </div>
     </main>
 
 
