--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <header class="container blue-bg">
         <nav class="row nav">
             <a class="nav-link" href="#footer"><i class="fa fa-users"><span class="pl-2">Collaborators</span></i></a>
-            <a class="nav-link" href="https://github.com/Yuliya-beCode/Javascript"><i
-                    class="fa fa-github"><span class="pl-2">Repository</span></i></a>
+            <a class="nav-link" href="https://github.com/Yuliya-beCode/Javascript"><i class="fa fa-github"><span
+                        class="pl-2">Repository</span></i></a>
         </nav>
     </header>
 
     <!-- Instructions-->
     <main class="container">
-        <section class="row">
+        <div class="row">
             <section class="col text-center mt-3">
                 <h5>Welcome to the smurfs' chatbot!</h5>
                 <p>It's easy: just write me a message and I will answer you!</p>
             </section>
-        </section>
+        </div>
 
         <!-- Image Smurf and Text-->
         <div class="row">
