--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row">
             <figure class="col-10 offset-1 col-sm-5 offset-sm-0 text-center mt-2" style="margin: 0;">
                 <img class="img-fluid" id="smurfImage"
-                    src="https://assets.stickpng.com/thumbs/5a7b6d93abc3d121aba710a0.png" alt="smurf1">
+                    src="https://assets.stickpng.com/thumbs/5a7b6d93abc3d121aba710a0.png" alt="firstsmurf">
             </figure>
 
             <div id="chatBox" class="card col-10 offset-1 col-sm-6 offset-sm-0 mt-2" style="width: 18rem;">
@@ -63,7 +63,7 @@
             <figure class="col-6 col-md-2 mt-3">
                 <img class="img-members rounded"
                     src="https://avatars.githubusercontent.com/u/77075781?s=460&u=c2568ed6d1a0594dae3f1a8d125395b20bbd203d&v=4"
-                    alt="yulyia">
+                    alt="pm">
 
             </figure>
             <section class="col-6 col-md-2 mt-3">
@@ -78,7 +78,7 @@
             <figure class="col-6 col-md-2 mt-3">
                 <img class="img-members rounded"
                     src="https://avatars.githubusercontent.com/u/73725361?s=460&u=8df0d19fd60e632b716d1450574fd606e0b533c5&v=4"
-                    alt="adriana">
+                    alt="frontend">
             </figure>
             <section class="col-6 col-md-2 mt-3">
                 <h6>Front-End Developer - Adriana Lazurca</h6>
@@ -92,7 +92,7 @@
             <figure class="col-6 col-md-2 mt-3">
                 <img class="img-members rounded"
                     src="https://avatars.githubusercontent.com/u/77080353?s=460&u=305f83234db742e1bb228924c9d80250787619b4&v=4"
-                    alt="frances">
+                    alt="backend">
             </figure>
             <section class="col-6 col-md-2 mt-3">
                 <h6>Back-End Developer - Frances Joffany Navarro</h6>
