--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row">
             <figure class="col-10 offset-1 col-sm-5 offset-sm-0 text-center mt-2" style="margin: 0;">
                 <img class="img-fluid" id="smurfImage"
-                    src="https://assets.stickpng.com/thumbs/5a7b6d93abc3d121aba710a0.png" alt="firstsmurf">
+                    src="./pictures/first-smurf.png" alt="firstsmurf">
             </figure>
 
             <div id="chatBox" class="card col-10 offset-1 col-sm-6 offset-sm-0 mt-2" style="width: 18rem;">
@@ -62,7 +62,7 @@
         <aside class="row text-center">
             <figure class="col-6 col-md-2 mt-3">
                 <img class="img-members rounded"
-                    src="https://avatars.githubusercontent.com/u/77075781?s=460&u=c2568ed6d1a0594dae3f1a8d125395b20bbd203d&v=4"
+                    src="./pictures/pm.jpg"
                     alt="pm">
 
             </figure>
@@ -77,7 +77,7 @@
 
             <figure class="col-6 col-md-2 mt-3">
                 <img class="img-members rounded"
-                    src="https://avatars.githubusercontent.com/u/73725361?s=460&u=8df0d19fd60e632b716d1450574fd606e0b533c5&v=4"
+                    src="./pictures/frontend.jpg"
                     alt="frontend">
             </figure>
             <section class="col-6 col-md-2 mt-3">
@@ -91,7 +91,7 @@
 
             <figure class="col-6 col-md-2 mt-3">
                 <img class="img-members rounded"
-                    src="https://avatars.githubusercontent.com/u/77080353?s=460&u=305f83234db742e1bb228924c9d80250787619b4&v=4"
+                    src="./pictures/backend.jpg"
                     alt="backend">
             </figure>
             <section class="col-6 col-md-2 mt-3">
