--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row">
             <figure class="col-10 offset-1 col-sm-5 offset-sm-0 text-center mt-2" style="margin: 0;">
                 <img class="img-fluid" id="smurfImage"
-                    src="./pictures/first-smurf.png" alt="firstsmurf">
+                    src="./pictures/smurf1.png" alt="firstsmurf">
             </figure>
 
             <div id="chatBox" class="card col-10 offset-1 col-sm-6 offset-sm-0 mt-2" style="width: 18rem;">
