--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     </footer>
 
 
-
-    <script src="script.js"></script>
+    <script src="scriptjs" async></script>
+    <!-- <script src="script.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
