--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <meta name="Description" content="Chat-bot creates in the framework of be Code education program">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
     <title>Chatbot</title>
 </head>
@@ -19,7 +22,7 @@
     <header class="container blue-bg">
         <nav class="row nav">
             <a class="nav-link" href="#footer"><i class="fa fa-users"><span class="pl-2">Collaborators</span></i></a>
-            <a class="nav-link" href="https://github.com/Yuliya-beCode/Javascript"><i class="fa fa-github"><span
+            <a class="nav-link" href="https://github.com/Yuliya-beCode/Javascript"><i class="fab fa-github"><span
                         class="pl-2">Repository</span></i></a>
         </nav>
     </header>
@@ -36,8 +39,7 @@
         <!-- Image Smurf and Text-->
         <div class="row">
             <figure class="col-10 offset-1 col-sm-5 offset-sm-0 text-center mt-2" style="margin: 0;">
-                <img class="img-fluid" id="smurfImage"
-                    src="./pictures/smurf1.png" alt="firstsmurf">
+                <img class="img-fluid" id="smurfImage" src="pictures/smurf1.png" alt="firstsmurf">
             </figure>
 
             <div id="chatBox" class="card col-10 offset-1 col-sm-6 offset-sm-0 mt-2" style="width: 18rem;">
@@ -61,51 +63,45 @@
         <!-- Yuliya -->
         <aside class="row text-center">
             <figure class="col-6 col-md-2 mt-3">
-                <img class="img-members rounded"
-                    src="./pictures/pm.jpg"
-                    alt="pm">
+                <img class="img-members rounded" src="pictures/pm.jpg" alt="pm">
 
             </figure>
             <section class="col-6 col-md-2 mt-3">
                 <h6>Project Manager - Yuliya Bochkovskaya</h6>
                 <a href="https://github.com/Yuliya-beCode">
-                    <i class="fa fa-github">/Yuliya-beCode</i>
+                    <i class="fab fa-github">/Yuliya-beCode</i>
                 </a>
             </section>
 
             <!-- Adriana -->
 
             <figure class="col-6 col-md-2 mt-3">
-                <img class="img-members rounded"
-                    src="./pictures/frontend.jpg"
-                    alt="frontend">
+                <img class="img-members rounded" src="pictures/frontend.jpg" alt="frontend">
             </figure>
             <section class="col-6 col-md-2 mt-3">
                 <h6>Front-End Developer - Adriana Lazurca</h6>
                 <a href="https://github.com/adriana-lazurca">
-                    <i class="fa fa-github">/adriana-lazurca</i>
+                    <i class="fab fa-github">/adriana-lazurca</i>
                 </a>
             </section>
 
             <!-- Frances -->
 
             <figure class="col-6 col-md-2 mt-3">
-                <img class="img-members rounded"
-                    src="./pictures/backend.jpg"
-                    alt="backend">
+                <img class="img-members rounded" src="pictures/backend.jpg" alt="backend">
             </figure>
             <section class="col-6 col-md-2 mt-3">
                 <h6>Back-End Developer - Frances Joffany Navarro</h6>
                 <a href="https://github.com/frances-joffany-navarro">
-                    <i class="fa fa-github">/frances-joffany-navarro</i>
+                    <i class="fab fa-github">/frances-joffany-navarro</i>
                 </a>
             </section>
         </aside>
     </footer>
 
 
-    <script src="script.js" async></script>
-    <!-- <script src="script.js"></script> -->
+    <!-- <script src="script.js" async></script> -->
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
