--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Chat-bot creates in the framework of be Code education program">
+    <link rel="shortcut icon" type="image/jpg" href="pictures/smurf.ico"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -21,7 +22,7 @@
     <!-- Header -->
     <header class="container blue-bg">
         <nav class="row nav">
-            <a class="nav-link" href="#footer"><i class="fa fa-users"><span class="pl-2">Collaborators</span></i></a>
+            <a class="nav-link" href="#footer"><i class="fas fa-users"><span class="pl-2">Collaborators</span></i></a>
             <a class="nav-link" href="https://github.com/Yuliya-beCode/Javascript"><i class="fab fa-github"><span
                         class="pl-2">Repository</span></i></a>
         </nav>
